# gooroom-security-utils

./: Makefile.am  configure.ac
data/: Makefile.am  default-log.conf  gooroom-security-logparser.py  gsl_util.py  translation
data/boot-protector/: db.auth  db.sig  gbp-daemon  install.sh  make_sig.sh  temp_db  uninstall.sh
data/exe-protector/: gep-daemon  install.sh  test.sh  uninstall.sh
data/security/: boot.py  exe.py  media.py  os.py
debian/: changelog  control  copyright  gooroom-security-utils.postinst  gooroom-security-utils.postrm  rules
libgrmpycaller/: Makefile.am  grmpycaller.c  grmpycaller.h  grmpycaller.pc.in  pycaller.py
usr/lib/gooroom-security-utils/: default-log.conf  gooroom-security-logparser.py  translation
usr/share/polkit-1/actions/: kr.gooroom.security.utils.policy
