bin_SCRIPTS = gooroom-security-logparser.py

scriptdir=$(libdir)/gooroom-security-utils/security
script_DATA=	\
	security/os.py		\
	security/boot.py		\
	security/exe.py		\
	security/media.py

bootprotectordir=$(datadir)/gooroom/security/boot-protector
bootprotector_DATA=\
	boot-protector/db.auth	\
	boot-protector/db.sig	\
	boot-protector/gbp-daemon	\
	boot-protector/install.sh	\
	boot-protector/make_sig.sh	\
	boot-protector/uninstall.sh

exeprotectordir=$(datadir)/gooroom/security/exe-protector
exeprotector_DATA=\
	exe-protector/gep-daemon	\
	exe-protector/ima-sig	\
	exe-protector/install.sh	\
	exe-protector/test.sh	\
	exe-protector/uninstall.sh
